--- a/index.html
+++ b/index.html
@@ -3,10 +3,25 @@
 <head>
     <meta charset="utf-8">
     <title>Test vk</title>
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="css/style.css" rel="stylesheet">
 </head>
 <body>
-<main>
 
+<main>
+    <header>
+
+    </header>
+
+    <section>
+
+    </section>
+
+    <footer>
+
+    </footer>
 </main>
+
+<script src="js/main.js"></script>
 </body>
 </html>
